idea/testData/checkerWithErrorTypes/full/PrimaryConstructors.jet
class <!PRIMARY_CONSTRUCTOR_MISSING_STATEFUL_PROPERTY!>X<!> {
  val <!MUST_BE_INITIALIZED_OR_BE_ABSTRACT!>x<!> : Int
}

open class Y() {
  val x : Int = 2
}

class Y1 {
  val x : Int get() = 1
}

class Z : Y<!PRIMARY_CONSTRUCTOR_MISSING_SUPER_CONSTRUCTOR_CALL!>()<!> {
}